--- a/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/infoUserStageTest.fxml
+++ b/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/infoUserStageTest.fxml
@@ -44,23 +44,23 @@
       </Label>
       <Button layoutX="224.0" layoutY="381.0" mnemonicParsing="false" onAction="#eliminaPreferito" text="Elimina" />
       <TableView fx:id="tableView" editable="true" layoutX="32.0" layoutY="166.0" prefHeight="200.0" prefWidth="437.0">
-        <columns>
-          <TableColumn fx:id="codsColumn" prefWidth="75.0" text="Codice Serie" />
-          <TableColumn fx:id="nomeSerieColumn" editable="false" prefWidth="75.0" text="Nome Serie" />
-            <TableColumn fx:id="numLibriColumn" prefWidth="75.0" text="Numero Di Libri" />
-            <TableColumn fx:id="termineColumn" prefWidth="75.0" text="Termine Serie" />
-        </columns>
          <contextMenu>
             <ContextMenu>
               <items>
                 <MenuItem mnemonicParsing="false" text="Vai Alla Pagina Informativa Serie" />
-                  <MenuItem mnemonicParsing="false" text="Elimina Dai preferiti" />
+                  <MenuItem mnemonicParsing="false" onAction="#eliminaPreferito" text="Elimina Dai preferiti" />
               </items>
             </ContextMenu>
          </contextMenu>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
+         <columns>
+            <TableColumn fx:id="codSColumn" prefWidth="75.0" text="Codice Serie" />
+            <TableColumn fx:id="nomeColumn" prefWidth="75.0" text="Nome Serie" />
+            <TableColumn fx:id="numLibriColumn" prefWidth="75.0" text="Numero Pagine" />
+            <TableColumn fx:id="completataColumn" prefWidth="75.0" text="Completata" />
+         </columns>
       </TableView>
    </children>
 </AnchorPane>
