--- a/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/homeStage.fxml
+++ b/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/homeStage.fxml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DialogPane?>
+<?import javafx.scene.control.Hyperlink?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="idSearchBar" prefHeight="900.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bibliotecadigitale.Controller.HomeController">
+<AnchorPane fx:id="idSearchBar" prefHeight="900.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bibliotecadigitale.Controller.HomeController">
    <children>
       <Hyperlink layoutX="687.0" layoutY="10.0" prefHeight="23.0" prefWidth="212.0" text="Email utente" AnchorPane.topAnchor="10.0" />
       <Button layoutX="832.0" layoutY="861.0" mnemonicParsing="false" text="Log off" />
@@ -16,10 +22,18 @@
             <Font size="14.0" />
          </font>
       </Button>
-      <ListView fx:id="listViewLibri" layoutX="120.0" layoutY="204.0" prefHeight="669.0" prefWidth="700.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" />
-      <Button layoutX="373.0" layoutY="861.0" mnemonicParsing="false" onAction="#Select" text="Cerca" />
+      <Button layoutX="607.0" layoutY="130.0" mnemonicParsing="false" onAction="#Select" text="Cerca" />
       <ComboBox fx:id="idComboBox" layoutX="450.0" layoutY="130.0" prefWidth="150.0" />
-      <Button fx:id="buttonMostra" disable="true" layoutX="502.0" layoutY="861.0" mnemonicParsing="false" onAction="#goToPaginaInformativaLibro" text="Mostra" />
+      <Button fx:id="buttonMostra" disable="true" layoutX="660.0" layoutY="130.0" mnemonicParsing="false" onAction="#goToPaginaInformativaLibro" text="Mostra" />
       <Button layoutX="14.0" layoutY="36.0" mnemonicParsing="false" onAction="#goToNotifiche" text="Notifiche" />
+      <TableView fx:id="tableView" fixedCellSize="0.0" layoutX="97.0" layoutY="182.0" prefHeight="535.0" prefWidth="700.0">
+        <columns>
+          <TableColumn fx:id="isbnColumn" prefWidth="95.9999771118164" text="ISBN" />
+          <TableColumn fx:id="titoloColumn" prefWidth="300.6666717529297" text="Titolo" />
+            <TableColumn fx:id="autoreColumn" prefWidth="104.66671752929688" text="Autore" />
+            <TableColumn fx:id="editoreColumn" prefWidth="105.33331298828125" text="Editore" />
+            <TableColumn fx:id="genereColumn" prefWidth="75.3333740234375" text="Genere" />
+        </columns>
+      </TableView>
    </children>
 </AnchorPane>
