--- a/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/paginaInformativaLibro.fxml
+++ b/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/paginaInformativaLibro.fxml
@@ -19,7 +19,7 @@
       <Text fx:id="textDataUscitaId" layoutX="14.0" layoutY="326.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Data Uscita" AnchorPane.topAnchor="313.05078125" />
       <Text fx:id="textLinguianId" layoutX="437.0" layoutY="302.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Lingua" textAlignment="RIGHT" AnchorPane.topAnchor="289.0" />
 
-      <Button fx:id="buttonSerieId" defaultButton="true" layoutX="222.0" layoutY="403.0" mnemonicParsing="false" onAction="#setPreferito" style="-fx-background-color: trasperent; -fx-cursor: hand;" text="Serie" textAlignment="JUSTIFY" textFill="#0800f8" underline="true" visible="false">
+      <Button fx:id="buttonSerieId" defaultButton="true" disable="true" layoutX="222.0" layoutY="403.0" mnemonicParsing="false" onAction="#setPreferito" style="-fx-background-color: trasperent; -fx-cursor: hand;" text="Serie" textAlignment="JUSTIFY" textFill="#0800f8" underline="true" visible="false">
          <font>
             <Font size="14.0" />
          </font>
@@ -29,21 +29,17 @@
             <Font size="14.0" />
          </font>
       </Button>
-      <Button fx:id="buttonEditoreId" defaultButton="true" layoutX="13.0" layoutY="403.0" mnemonicParsing="false" style="-fx-background-color: trasperent; -fx-cursor: hand;" text="Editore" textAlignment="RIGHT" textFill="#0800f8" underline="true">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Button>
       <Button fx:id="buttonAquistoId" defaultButton="true" layoutX="420.0" layoutY="460.0" mnemonicParsing="false" style="-fx-background-color: trasperent; -fx-cursor: hand;" text="Aquisto" textFill="#0800f8" underline="true">
          <font>
             <Font size="14.0" />
          </font>
       </Button>
-      <Button fx:id="buttonSuccessivoId" defaultButton="true" layoutX="197.0" layoutY="460.0" mnemonicParsing="false" style="-fx-background-color: trasperent; -fx-cursor: hand;" text="Successivo" textAlignment="JUSTIFY" textFill="#0800f8" underline="true">
+      <Button fx:id="buttonSuccessivoId" defaultButton="true" disable="true" layoutX="197.0" layoutY="460.0" mnemonicParsing="false" onAction="#goToNext" style="-fx-background-color: trasperent; -fx-cursor: hand;" text="Successivo" textAlignment="JUSTIFY" textFill="#0800f8" underline="true" visible="false">
          <font>
             <Font size="14.0" />
          </font>
       </Button>
       <Text fx:id="textMessagioId" layoutX="112.0" layoutY="399.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Premi sull'id della sserie per aggingerla tra i preferiti" visible="false" />
+      <Text fx:id="txtEditoreId" layoutX="15.0" layoutY="422.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Editore" />
    </children>
 </AnchorPane>
