--- a/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/homeStage.fxml
+++ b/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/homeStage.fxml
@@ -2,8 +2,10 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.DialogPane?>
 <?import javafx.scene.control.Hyperlink?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -13,7 +15,7 @@
 <AnchorPane fx:id="idSearchBar" prefHeight="900.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bibliotecadigitale.Controller.HomeController">
    <children>
       <Hyperlink layoutX="687.0" layoutY="10.0" prefHeight="23.0" prefWidth="212.0" text="Email utente" AnchorPane.topAnchor="10.0" />
-      <Button layoutX="832.0" layoutY="861.0" mnemonicParsing="false" text="Log off" />
+      <Button layoutX="831.0" layoutY="861.0" mnemonicParsing="false" text="Log off" />
       <Hyperlink layoutX="14.0" layoutY="10.0" prefHeight="23.0" prefWidth="212.0" text="Notifica" />
       <TextField fx:id="idBarSearch" layoutX="298.0" layoutY="130.0" />
       <DialogPane layoutX="93.0" layoutY="177.0" prefHeight="654.0" prefWidth="700.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" />
@@ -25,7 +27,7 @@
       <Button layoutX="607.0" layoutY="130.0" mnemonicParsing="false" onAction="#Select" text="Cerca" />
       <ComboBox fx:id="idComboBox" layoutX="450.0" layoutY="130.0" prefWidth="150.0" />
       <Button fx:id="buttonMostra" disable="true" layoutX="660.0" layoutY="130.0" mnemonicParsing="false" onAction="#goToPaginaInformativaLibro" text="Mostra" />
-      <Button layoutX="14.0" layoutY="36.0" mnemonicParsing="false" onAction="#goToNotifiche" text="Notifiche" />
+      <Button layoutX="15.0" layoutY="36.0" mnemonicParsing="false" onAction="#goToNotifiche" text="Notifiche" />
       <TableView fx:id="tableView" fixedCellSize="0.0" layoutX="97.0" layoutY="182.0" prefHeight="535.0" prefWidth="700.0">
         <columns>
           <TableColumn fx:id="isbnColumn" prefWidth="95.9999771118164" text="ISBN" />
@@ -34,6 +36,14 @@
             <TableColumn fx:id="editoreColumn" prefWidth="105.33331298828125" text="Editore" />
             <TableColumn fx:id="genereColumn" prefWidth="75.3333740234375" text="Genere" />
         </columns>
+         <contextMenu>
+            <ContextMenu>
+               <items>
+                  <MenuItem mnemonicParsing="false" onAction="#goToPaginaInformativaLibro" text="Vai Alla Pagina Informativa Libro" />
+                  <MenuItem mnemonicParsing="false" onAction="#goToPaginaInformativaLibro" text="Vai Alla Pagina Informativa Serie" />
+               </items>
+            </ContextMenu>
+         </contextMenu>
       </TableView>
    </children>
 </AnchorPane>
