--- a/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/presentazioneStage.fxml
+++ b/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/presentazioneStage.fxml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Text?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bibliotecadigitale.Controller.PresentazioneStageController
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="250.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bibliotecadigitale.Controller.PresentazioneStageController">
+   <children>
+      <Text fx:id="textCodPId" layoutX="100.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CodP" textAlignment="CENTER" />
+      <Text fx:id="textNomeId" layoutX="98.0" layoutY="53.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nome" textAlignment="CENTER" />
+      <Text fx:id="textIndizioId" layoutX="92.0" layoutY="89.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Indirizzo" />
+      <Text fx:id="textTipoId" layoutX="76.0" layoutY="165.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tipo" textAlignment="CENTER" wrappingWidth="75.13671875" />
+      <Text fx:id="textDataPresentazioneId" layoutX="61.0" layoutY="121.0" strokeType="OUTSIDE" strokeWidth="0.0" text="DataPresentazioone" textAlignment="CENTER" />
+      <Button fx:id="buttonClose" layoutX="88.0" layoutY="211.0" mnemonicParsing="false" text="Close" />
+   </children>
+</AnchorPane>
