--- a/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/paginaInformativaLibro.fxml
+++ b/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/paginaInformativaLibro.fxml
@@ -9,17 +9,17 @@
    <children>
       <Button layoutX="14.0" layoutY="462.0" mnemonicParsing="false" onAction="#goToHome" text="Go Back" />
       <Text fx:id="textTitleIId" layoutX="11.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Titolo" AnchorPane.leftAnchor="11.0" AnchorPane.topAnchor="14.0" />
-      <Text fx:id="textIsbnId" layoutX="15.0" layoutY="302.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Isbn" AnchorPane.topAnchor="289.0" />
-      <Text fx:id="textGenereId" layoutX="15.0" layoutY="352.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Genere" AnchorPane.topAnchor="339.0" />
-      <Text fx:id="textNumeroPagineId" layoutX="402.0" layoutY="377.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Numero pagine" textAlignment="RIGHT" AnchorPane.topAnchor="364.0" />
-      <Text fx:id="textTIpoId" layoutX="402.0" layoutY="351.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tipo" textAlignment="RIGHT" AnchorPane.topAnchor="338.0" />
-      <Text fx:id="textMateriaId" layoutX="16.0" layoutY="377.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Materia" visible="false" wrappingWidth="40.40625" AnchorPane.topAnchor="364.0" />
-      <Text fx:id="textDescrizioneId" layoutX="14.0" layoutY="98.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Descrizione" textAlignment="JUSTIFY" wrappingWidth="465.0" AnchorPane.topAnchor="85.0" />
-      <Text fx:id="textFruizioneId" layoutX="403.0" layoutY="325.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ftuizione" textAlignment="RIGHT" AnchorPane.topAnchor="312.05078125" />
-      <Text fx:id="textDataUscitaId" layoutX="14.0" layoutY="326.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Data Uscita" AnchorPane.topAnchor="313.05078125" />
-      <Text fx:id="textLinguianId" layoutX="405.0" layoutY="301.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Lingua" textAlignment="RIGHT" AnchorPane.topAnchor="288.05078125" />
+      <Text id="ISbn" fx:id="textIsbnId" layoutY="300.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Isbn" wrappingWidth="500.0" AnchorPane.topAnchor="287.05078125" />
+      <Text id="Genere" fx:id="textGenereId" layoutY="352.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Genere" wrappingWidth="500.0" AnchorPane.topAnchor="339.0" />
+      <Text id="Numero pagine" fx:id="textNumeroPagineId" layoutX="-3.0" layoutY="376.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Numero pagine" textAlignment="RIGHT" wrappingWidth="500.0" AnchorPane.topAnchor="363.05078125" />
+      <Text id="tipo" fx:id="textTIpoId" layoutX="-1.0" layoutY="352.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tipo" textAlignment="RIGHT" wrappingWidth="500.0" AnchorPane.topAnchor="339.05078125" />
+      <Text id="Materia" fx:id="textMateriaId" layoutX="5.0" layoutY="375.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Materia" visible="false" wrappingWidth="500.0" AnchorPane.topAnchor="362.05078125" />
+      <Text id="Descrizione" fx:id="textDescrizioneId" layoutX="14.0" layoutY="98.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Descrizione" textAlignment="JUSTIFY" wrappingWidth="465.0" AnchorPane.topAnchor="85.0" />
+      <Text id="fruizione" fx:id="textFruizioneId" layoutX="-1.0" layoutY="324.94921875" strokeType="OUTSIDE" strokeWidth="0.0" text="Ftuizione" textAlignment="RIGHT" wrappingWidth="500.0" AnchorPane.topAnchor="312.0" />
+      <Text id="Data uscita" fx:id="textDataUscitaId" layoutX="-1.0" layoutY="324.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Data Uscita" wrappingWidth="500.0" AnchorPane.topAnchor="311.0" />
+      <Text id="Lingua" fx:id="textLinguianId" layoutX="-1.0" layoutY="301.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Lingua" textAlignment="RIGHT" wrappingWidth="500.0" AnchorPane.topAnchor="288.05078125" />
 
-      <Button fx:id="buttonSerieId" defaultButton="true" disable="true" layoutX="222.0" layoutY="403.0" mnemonicParsing="false" onAction="#setPreferito" style="-fx-background-color: trasperent; -fx-cursor: hand;" text="Serie" textAlignment="JUSTIFY" textFill="#0800f8" underline="true" visible="false">
+      <Button fx:id="buttonSerieId" defaultButton="true" disable="true" layoutX="231.0" layoutY="384.0" mnemonicParsing="false" onAction="#setPreferito" style="-fx-background-color: trasperent; -fx-cursor: hand;" text="Serie" textAlignment="JUSTIFY" textFill="#0800f8" underline="true">
          <font>
             <Font size="14.0" />
          </font>
@@ -34,9 +34,9 @@
             <Font size="14.0" />
          </font>
       </Button>
-      <Text fx:id="textMessagioId" layoutX="112.0" layoutY="399.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Premi sull'id della sserie per aggingerla tra i preferiti" visible="false" />
-      <Text fx:id="txtEditoreId" layoutX="15.0" layoutY="422.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Editore" />
-      <Text fx:id="textAutoreId" layoutX="402.0" layoutY="422.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Autore" textAlignment="RIGHT" />
+      <Text id="Frasee" fx:id="textMessagioId" layoutY="389.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Premi sull'id della sserie per aggingerla tra i preferiti" textAlignment="CENTER" wrappingWidth="500.0" />
+      <Text id="Editore" fx:id="txtEditoreId" layoutY="411.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Editore" wrappingWidth="480.0" />
+      <Text id="Autore" fx:id="textAutoreId" layoutY="412.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Autore" textAlignment="RIGHT" wrappingWidth="500.0" />
       <Button fx:id="buttonPresentazioneid" defaultButton="true" disable="true" layoutX="272.0" layoutY="460.0" mnemonicParsing="false" onAction="#goToPresentazione" style="-fx-background-color: trasperent; -fx-cursor: hand;" text="Presentazione" textFill="#0800f8" underline="true" visible="false">
          <font>
             <Font size="14.0" />
