--- a/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/homeStage.fxml
+++ b/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/homeStage.fxml
@@ -13,14 +13,14 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="idSearchBar" prefHeight="900.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bibliotecadigitale.Controller.HomeController">
+<AnchorPane fx:id="idSearchBar" prefHeight="900.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bibliotecadigitale.Controller.HomeController">
    <children>
       <Hyperlink layoutX="687.0" layoutY="10.0" prefHeight="23.0" prefWidth="212.0" text="Email utente" AnchorPane.topAnchor="10.0" />
       <Button layoutX="831.0" layoutY="861.0" mnemonicParsing="false" onAction="#logOff" text="Log off" />
       <Hyperlink layoutX="14.0" layoutY="10.0" prefHeight="23.0" prefWidth="212.0" text="Notifica" />
       <TextField fx:id="idBarSearch" layoutX="298.0" layoutY="130.0" />
       <DialogPane layoutX="93.0" layoutY="177.0" prefHeight="654.0" prefWidth="700.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" />
-      <Button defaultButton="true" layoutX="687.0" layoutY="34.0" mnemonicParsing="false" onAction="#goToInfoUser" style="-fx-background-color: trasperent; -fx-cursor: hand;" text="Info Utente" textFill="#0800f8" underline="true">
+      <Button defaultButton="true" layoutX="687.0" layoutY="34.0" mnemonicParsing="false" onAction="#goToInfoUser" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Info Utente" textFill="#0800f8" underline="true">
          <font>
             <Font size="14.0" />
          </font>
