--- a/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/infoUserStageTest2.fxml
+++ b/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/infoUserStageTest2.fxml
@@ -3,14 +3,13 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="500" prefWidth="500" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bibliotecadigitale.Controller.InfoUserController">
+<AnchorPane prefHeight="500" prefWidth="500" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bibliotecadigitale.Controller.InfoUserController">
    <children>
       <Label layoutX="14.0" layoutY="14.0" prefHeight="47.0" prefWidth="293.0" text="Informazioni Utente">
          <font>
@@ -34,6 +33,15 @@
             <Font size="15.0" />
          </font>
       </Label>
+      <ListView fx:id="listViewSerie" editable="true" layoutX="71.0" layoutY="166.0" prefHeight="200.0" prefWidth="357.0">
+         <contextMenu>
+            <ContextMenu>
+              <items>
+                <MenuItem mnemonicParsing="false" text="Vai Alla Pagina Informativa Serie" />
+                  <MenuItem mnemonicParsing="false" text="Elimina Dai preferiti" />
+              </items>
+            </ContextMenu>
+         </contextMenu></ListView>
       <Button fx:id="buttonBack" layoutX="64.0" layoutY="423.0" mnemonicParsing="false" onAction="#back_goToHome" text="Back" />
       <PasswordField fx:id="txtOldPassword" layoutX="81.0" layoutY="120.0" promptText="Vecchia Password" />
       <PasswordField fx:id="txtNewPassword" layoutX="232.0" layoutY="120.0" promptText="NuovaPassword" />
@@ -43,24 +51,5 @@
          </font>
       </Label>
       <Button layoutX="224.0" layoutY="381.0" mnemonicParsing="false" onAction="#eliminaPreferito" text="Elimina" />
-      <TableView fx:id="tableView" editable="true" layoutX="32.0" layoutY="166.0" prefHeight="200.0" prefWidth="437.0">
-         <contextMenu>
-            <ContextMenu>
-              <items>
-                <MenuItem mnemonicParsing="false" text="Vai Alla Pagina Informativa Serie" />
-                  <MenuItem mnemonicParsing="false" onAction="#eliminaPreferito" text="Elimina Dai preferiti" />
-              </items>
-            </ContextMenu>
-         </contextMenu>
-         <columnResizePolicy>
-            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-         </columnResizePolicy>
-         <columns>
-            <TableColumn fx:id="codSColumn" prefWidth="75.0" text="Codice Serie" />
-            <TableColumn fx:id="nomeColumn" prefWidth="75.0" text="Nome Serie" />
-            <TableColumn fx:id="numLibriColumn" prefWidth="75.0" text="Numero Pagine" />
-            <TableColumn fx:id="completataColumn" prefWidth="75.0" text="Completata" />
-         </columns>
-      </TableView>
    </children>
 </AnchorPane>
