--- a/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/welcomeStage.fxml
+++ b/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/welcomeStage.fxml
@@ -6,20 +6,19 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bibliotecadigitale.Controller.WelcomeController">
-<HBox fillHeight="false" maxHeight="500.0" maxWidth="500.0" minHeight="500.0" minWidth="500.0" prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bibliotecadigitale.Controller.WelcomeController"><HBox fillHeight="false" maxHeight="500.0" maxWidth="500.0" minHeight="500.0" minWidth="500.0" prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <AnchorPane maxHeight="500.0" maxWidth="200.0" minHeight="500.0" minWidth="200.0" prefHeight="500.0" prefWidth="200.0" style="-fx-border-color: brown;">
+      <AnchorPane maxHeight="500.0" maxWidth="200.0" minHeight="500.0" minWidth="200.0" prefHeight="500.0" prefWidth="200.0" style="-fx-border-color: #964B00;">
          <children>
             <ImageView fx:id="imageWelcome" fitHeight="495.0" fitWidth="200.0" layoutX="2.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
                <image>
                </image>
             </ImageView>
          </children></AnchorPane>
-      <AnchorPane maxHeight="500.0" maxWidth="300.0" minHeight="500.0" minWidth="300.0" prefHeight="500.0" prefWidth="300.0" style="-fx-border-color: brown;">
+      <AnchorPane maxHeight="500.0" maxWidth="300.0" minHeight="500.0" minWidth="300.0" prefHeight="500.0" prefWidth="300.0" style="-fx-border-color: #964B00;">
          <children>
                <ImageView fx:id="imageWelcome2" fitHeight="498.0" fitWidth="298.0" layoutX="1.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true" />
-               <StackPane layoutX="16.0" layoutY="40.0" prefHeight="419.0" prefWidth="267.0" style="-fx-background-color: fdf3ea; -fx-border-color: de5f4f; -fx-border-radius: 20; -fx-border-width: 2;" />
+               <StackPane layoutX="16.0" layoutY="40.0" prefHeight="419.0" prefWidth="267.0" style="-fx-background-color: #fdf3ea; -fx-border-color: #de5f4f; -fx-border-radius: 20; -fx-border-width: 2;" />
             <Text fill="#2b2d30" layoutX="24.0" layoutY="151.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email">
                <font>
                   <Font name="Arial" size="20.0" />
@@ -45,7 +44,7 @@
                   <Font name="Arial" size="20.0" />
                </font>
             </Text>
-            <Button fx:id="ButtonSingUp" defaultButton="true" layoutX="210.0" layoutY="321.0" mnemonicParsing="false" onAction="#goToSingUpUtente" style="-fx-background-color: trasperent; -fx-cursor: hand;" text="Sign Up" textFill="#de5f4f" underline="true">
+            <Button fx:id="ButtonSingUp" defaultButton="true" layoutX="210.0" layoutY="321.0" mnemonicParsing="false" onAction="#goToSingUpUtente" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Sign Up" textFill="#de5f4f" underline="true">
                <font>
                   <Font size="14.0" />
                </font>
