--- a/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/homeStageAdmin.fxml
+++ b/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/homeStageAdmin.fxml
@@ -18,7 +18,7 @@
         <DialogPane layoutX="93.0" layoutY="177.0" prefHeight="654.0" prefWidth="700.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" />
         <Button layoutX="607.0" layoutY="130.0" mnemonicParsing="false" onAction="#Select" text="Cerca" />
         <ComboBox fx:id="comboBoxRicerca" layoutX="450.0" layoutY="130.0" prefWidth="150.0" />
-        <Button fx:id="buttonMostra" disable="true" layoutX="660.0" layoutY="130.0" mnemonicParsing="false" onAction="#goToPaginaInformativaLibro" text="Mostra" />
+        <Button fx:id="buttonMostra" disable="true" layoutX="660.0" layoutY="130.0" mnemonicParsing="false" text="Mostra" />
         <TableView fx:id="libroTableView" fixedCellSize="0.0" layoutX="97.0" layoutY="182.0" prefHeight="535.0" prefWidth="700.0">
             <columns>
                 <TableColumn fx:id="isbnLibro" prefWidth="95.9999771118164" text="ISBN" />
@@ -39,8 +39,8 @@
             <contextMenu>
                 <ContextMenu>
                     <items>
-                        <MenuItem mnemonicParsing="false" onAction="#goToPaginaInformativaLibro" text="Update" />
-                        <MenuItem mnemonicParsing="false" onAction="#goToPaginaInformativaLibro" text="Delete" />
+                        <MenuItem mnemonicParsing="false" text="Update" />
+                        <MenuItem mnemonicParsing="false" text="Delete" />
                     </items>
                 </ContextMenu>
             </contextMenu>
@@ -64,8 +64,8 @@
             <contextMenu>
                 <ContextMenu>
                     <items>
-                        <MenuItem mnemonicParsing="false" onAction="#goToPaginaInformativaLibro" text="Update" />
-                        <MenuItem mnemonicParsing="false" onAction="#goToPaginaInformativaLibro" text="Delete" />
+                        <MenuItem mnemonicParsing="false" text="Update" />
+                        <MenuItem mnemonicParsing="false" text="Delete" />
                     </items>
                 </ContextMenu>
             </contextMenu>
@@ -81,8 +81,8 @@
             <contextMenu>
                 <ContextMenu>
                     <items>
-                        <MenuItem mnemonicParsing="false" onAction="#goToPaginaInformativaLibro" text="Update" />
-                        <MenuItem mnemonicParsing="false" onAction="#goToPaginaInformativaLibro" text="Delete" />
+                        <MenuItem mnemonicParsing="false" text="Update" />
+                        <MenuItem mnemonicParsing="false" text="Delete" />
                     </items>
                 </ContextMenu>
             </contextMenu>
@@ -100,8 +100,8 @@
             <contextMenu>
                 <ContextMenu>
                     <items>
-                        <MenuItem mnemonicParsing="false" onAction="#goToPaginaInformativaLibro" text="Update" />
-                        <MenuItem mnemonicParsing="false" onAction="#goToPaginaInformativaLibro" text="Delete" />
+                        <MenuItem mnemonicParsing="false" text="Update" />
+                        <MenuItem mnemonicParsing="false" text="Delete" />
                     </items>
                 </ContextMenu>
             </contextMenu>
@@ -117,8 +117,8 @@
             <contextMenu>
                 <ContextMenu>
                     <items>
-                        <MenuItem mnemonicParsing="false" onAction="#goToPaginaInformativaLibro" text="Update" />
-                        <MenuItem mnemonicParsing="false" onAction="#goToPaginaInformativaLibro" text="Delete" />
+                        <MenuItem mnemonicParsing="false" text="Update" />
+                        <MenuItem mnemonicParsing="false" text="Delete" />
                     </items>
                 </ContextMenu>
             </contextMenu>
@@ -133,8 +133,8 @@
             <contextMenu>
                 <ContextMenu>
                     <items>
-                        <MenuItem mnemonicParsing="false" onAction="#goToPaginaInformativaLibro" text="Update" />
-                        <MenuItem mnemonicParsing="false" onAction="#goToPaginaInformativaLibro" text="Delete" />
+                        <MenuItem mnemonicParsing="false" text="Update" />
+                        <MenuItem mnemonicParsing="false" text="Delete" />
                     </items>
                 </ContextMenu>
             </contextMenu>
@@ -150,8 +150,8 @@
             <contextMenu>
                 <ContextMenu>
                     <items>
-                        <MenuItem mnemonicParsing="false" onAction="#goToPaginaInformativaLibro" text="Update" />
-                        <MenuItem mnemonicParsing="false" onAction="#goToPaginaInformativaLibro" text="Delete" />
+                        <MenuItem mnemonicParsing="false" text="Update" />
+                        <MenuItem mnemonicParsing="false" text="Delete" />
                     </items>
                 </ContextMenu>
             </contextMenu>
@@ -166,9 +166,9 @@
             <contextMenu>
                 <ContextMenu>
                     <items>
-                        <MenuItem mnemonicParsing="false" onAction="#goToPaginaInformativaLibro" text="Rendi Admin" />
-                        <MenuItem mnemonicParsing="false" onAction="#goToPaginaInformativaLibro" text="Update" />
-                        <MenuItem mnemonicParsing="false" onAction="#goToPaginaInformativaLibro" text="Delete" />
+                        <MenuItem mnemonicParsing="false" text="Rendi Admin" />
+                        <MenuItem mnemonicParsing="false" text="Update" />
+                        <MenuItem mnemonicParsing="false" text="Delete" />
                     </items>
                 </ContextMenu>
             </contextMenu>
@@ -181,8 +181,8 @@
             <contextMenu>
                 <ContextMenu>
                     <items>
-                        <MenuItem mnemonicParsing="false" onAction="#goToPaginaInformativaLibro" text="Update" />
-                        <MenuItem mnemonicParsing="false" onAction="#goToPaginaInformativaLibro" text="Delete" />
+                        <MenuItem mnemonicParsing="false" text="Update" />
+                        <MenuItem mnemonicParsing="false" text="Delete" />
                     </items>
                 </ContextMenu>
             </contextMenu>
@@ -195,8 +195,8 @@
             <contextMenu>
                 <ContextMenu>
                     <items>
-                        <MenuItem mnemonicParsing="false" onAction="#goToPaginaInformativaLibro" text="Update" />
-                        <MenuItem mnemonicParsing="false" onAction="#goToPaginaInformativaLibro" text="Delete" />
+                        <MenuItem mnemonicParsing="false" text="Update" />
+                        <MenuItem mnemonicParsing="false" text="Delete" />
                     </items>
                 </ContextMenu>
             </contextMenu>
@@ -209,15 +209,15 @@
             <contextMenu>
                 <ContextMenu>
                     <items>
-                        <MenuItem mnemonicParsing="false" onAction="#goToPaginaInformativaLibro" text="Update" />
-                        <MenuItem mnemonicParsing="false" onAction="#goToPaginaInformativaLibro" text="Delete" />
+                        <MenuItem mnemonicParsing="false" text="Update" />
+                        <MenuItem mnemonicParsing="false" text="Delete" />
                     </items>
                 </ContextMenu>
             </contextMenu>
         </TableView>
         <Text layoutX="130.0" layoutY="119.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cosa Vuoi ricercare ?" wrappingWidth="136.91082000732422" />
         <Text layoutX="308.0" layoutY="176.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Premi Con Il Tasto Destro Del Mouse Per Le Azioni" wrappingWidth="277.5774459838867" />
-        <ComboBox fx:id="comboBoxTableView" layoutX="117.0" layoutY="130.0" prefWidth="150.0" />
+        <ComboBox fx:id="comboBoxTableView" layoutX="117.0" layoutY="130.0" onAction="#selezioneSceltaTableView" prefWidth="150.0" />
         <Button layoutX="397.0" layoutY="80.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="105.0" text="Inserisci Altro " />
     </children>
 </AnchorPane>
